Updated FVU Form

--- a/fvu_request.html
+++ b/fvu_request.html
@@ -382,7 +382,7 @@
                             <input type="checkbox" id="inlineCheckbox3" value="option3"> Other (Explain)
                           </label>
                           <div class="form-group">
-                            <label for="exampleInputEmail1">Explain Your Needs:</label>
+                            <label for="exampleInputEmail1">Explain Your Need:</label>
                             <input type="text" class="form-control" id="exampleInputEmail1">
                           </div>
                         </div>
